pyroscope (0.3.5) hardy; urgency=low

  * rtcontrol: Added "tagged" field and "--tag" option to set them
  * rtcontrol: Added "views" field that uses the TaggedAsFilter for selection
  * rtcontrol: All named custom attributes are available as "custom_NAME"
  * rtcontrol: Added --column-headers option
  * Configurable output formats added ("rtcontrol -o format_name")
  * Output formatting: system field "now" and format spec ".iso" for dates
  * xmlrpc-c is now checked for 64 bit support when connecting

 -- pyroscope <pyroscope.project@gmail.com>  Thu, 19 Aug 2010 20:10:22 +0200

pyroscope (0.3.4) hardy; urgency=low

  * Note that some new features need special entries in .rtorrent.rc, so read
    http://code.google.com/p/pyroscope/wiki/UserConfiguration before updating
  * chtor: --comment, --bump-date, and --no-date added
  * chtor: dropped --force, and replaced it by --reannounce-all
  * chtor: takes alias names for announe URLs now
  * rtcontrol: added machinery to allow custom field definitions
  * rtcontrol: --help-fields added
  * rtcontrol: interactive mode added (-i, --yes)
  * rtcontrol: --ignore=0|1 added (to set 'ignore commands' flag)
  * rtcontrol: added fields "is_ignored" and "is_active"
  * rtcontrol: added field "directory" (which unlike "path" won't be empty)
  * rtcontrol: --flush added
  * rtcontrol: --delete added
  * rtcontrol: --throttle=NAME and "throttle" field added
  * rtcontrol: added fields "loaded" and "completed"
  * rtcontrol: added timestamp filtering, see RtControlExamples wiki page for details
  * Added support for XMLRPC TCP connections (scgi_port)
  * Added "rtxmlrpc" command

 -- pyroscope <pyroscope.project@gmail.com>  Mon, 16 Aug 2010 00:29:51 +0200

pyroscope (0.3.3) hardy; urgency=low

  * rtcontrol: --nul option added (for use with "xargs")
  * rtcontrol: --hash-check action added (use with care!)
  * lstor: --raw option added
  * chtor: options --no-skip, --force, --clean, --clean-all,